# codex-filehog

./: Cargo.toml  README.md  config.example.toml
src/: codex.rs  config.rs  error.rs  file_processor.rs  lib.rs  main.rs  monitor.rs  storage.rs
